@@ -30,13 +30,18 @@
 
 @interface SQLiteAdaptor : NSObject
 {
-  SQLClient *songRatingsDB;
+  SQLClient *MPDConDB;
 }
 + (id) sharedSQLiteAdaptor;
 
+// Song ratings related methods
 - (void) setRating: (NSUInteger) rating forFile: (NSString *) fileName;
 - (NSUInteger) getRatingForFile: (NSString *) fileName;
 - (NSArray *) getFilesForRatingsInRange: (NSRange) range;
+
+// Lyrics related methods
+- (void) setLyrics: (NSString *) lyricsText withURL: (NSString *) lyricsURL forFile: (NSString *) fileName;
+- (NSDictionary *) getLyricsForFile: (NSString *) fileName;
 
 @end
 
